[package]
name = "ansi_control"
description = "Library for controlling a cursor and a screen, on ANSI terminals."
version = "0.1.0"
authors = ["halship <gship@hotmail.co.jp>"]

homepage = "https://github.com/halship/rust-ansi-control"

license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
